# ad-mpc-pp

./: .gitmodules  Dockerfile  Dockerfile.unified  README.md  docker-compose.yml  run-dumbo-mpc-local.sh  run_local_network_test.sh
admpc/: Dockerfile  README.md  docker-compose.yml  extracted_times.csv  local_admpc_run.sh  summary_times.csv
admpc/adkg/: acss.py  admpc.py  admpc_dynamic.py  admpc_dynamic_linear.py  admpc_dynamic_nonlinear.py  aprep.py  bundle.py  dynamic_admpc.py  fluid_mpc.py  fluid_mpc_1.py  hbmpc_attack.py  hbproofs.py  honeybadger_mpc.py  mpc.py  poly_commit_log.py  polynomial.py  rand.py  (+4 more)
admpc/adkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dumbo-mpc/: Dockerfile  docker-compose.yml  local_admpc_run.sh  run_local_network_test.sh  trusted_times.csv  trusted_times_layer_avg.csv  trusted_times_overall_avg_trimmed.csv
dumbo-mpc/bulletproofs-amcl/: Cargo.toml
dumbo-mpc/bulletproofs-amcl/src/: ipp.rs  lib.rs  transcript.rs  vrf.rs
dumbo-mpc/bulletproofs-amcl/src/poseidon/: constraints.rs  grain_lfsr.rs  mod.rs  pvtransfer.rs  traits.rs
dumbo-mpc/bulletproofs-amcl/src/r1cs/: prover.rs
dumbo-mpc/bulletproofs-amcl/src/utils/: mod.rs
dumbo-mpc/bulletproofs-amcl/tests/: constraints.rs  elgamal.rs  grain_lfsr.rs  hybrid.rs  mod.rs  poseidon_fieldelem.rs  poseidon_native.rs  pvtransfer.rs  r1cs.rs  r1cs_test.rs  traits.rs  vrf.rs
remote/: config.sh
unified/: build_unified_image.sh  enter_admpc.sh  enter_continuum.sh  run_admpc_local.sh  run_compare_local.sh  run_continuum_local.sh  run_dumbo_mpc_local.sh  run_unified_container.sh
(+1819 files in other folders)
