[package]
name = "bulletproofs_amcl"
version = "0.1.0"
authors = ["lovesh harchandani <lovesh.bond@gmail.com>"]
edition = "2018"

[lib]
name = "bulletproofs_amcl"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
rand = "0.7"
lazy_static = "1.3.0"
merlin = "1"
byteorder = "1.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.3"
hex = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-sponge = { version = "0.4.0-alpha", features = ["r1cs"] }
ark-serialize = { version = "0.4.0-alpha", default-features = false }
# ark-crypto-primitives = { version = "0.4", features = ["crh"] }

[dependencies.amcl_wrapper]
path = "../amcl_rust_wrapper"
default-features = false
features = ["bls381"]

[features]
default = ["bls381"]
bls381 = ["amcl_wrapper/bls381"]
bn254 = ["amcl_wrapper/bn254"]
secp256k1 = ["amcl_wrapper/secp256k1"]
ed25519 = ["amcl_wrapper/ed25519"]
